--- a/index.html
+++ b/index.html
@@ -12,25 +12,33 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
         <style>
-            body {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                height: 100vh;
-                margin: 0;
-            }
-            button {
-                padding: 12px 24px;
-                font-size: 1.2rem;
-                background-color: #4CAF50;
+           body {
+			background-image: url('background.jpg');
+			background-size: cover;
+			background-repeat: no-repeat;
+			background-position: center;
+		    }
+            .button {
+                display: inline-block;
+                padding: 10px 20px;
+                background-color: #0099ff;
                 color: #fff;
-                border: none;
-                border-radius: 4px;
+                font-size: 24px;
+                font-weight: bold;
+                border-radius: 50px;
                 cursor: pointer;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
             }
+
+            .button:hover {
+			background-color: #008ae6;
+		    }
         </style>
     </head>
     <body>      
-        <button>Click Me</button>
+        <button class="button" onclick="window.location.href='http://www.example.com';">Click Me</button>
     </body>
 </html>
