--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         </style>
     </head>
     <body>      
-        <button class="btn btn-outline-danger" onclick="window.location.href='http://www.example.com';">Click Me</button>
+        <button class="btn btn-outline-danger" 	position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: traonclick="window.location.href='http://www.example.com';">Click Me</button>
     </body>
 </html>
