--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 var latitude = position.coords.latitude;
                 var longitude = position.coords.longitude;
                 var location = "Latitude: " + latitude + "<br>Longitude: " + longitude;
-                alert(location)
+                alert(location);
             }
         
     </body>
