--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
             <p id="location" class="texto2">This is your location: </p>
             <p id="deviceInfo" class="texto2">This is your device: </p>
             <p id="ip" class="texto2">This is your IP: </p>
+            <p class="texto2">This shows how easy a website can obtain crucial informstion from the click of a button!</p>
             </div>
         </div>
         <section id= "section1" class = "vpn hide" role = "Information Secuirty">
