--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <p id="location" class="texto2">This is your location: </p>
             <p id="deviceInfo" class="texto2">This is your device: </p>
             <p id="ip" class="texto2">This is your IP: </p>
-            <p class="texto2">This shows how easy a website can obtain crucial informstion from just the click of a button!</p>
+            <p class="texto2">This shows how easy a website can obtain crucial information from just the click of a button!</p>
             </div>
         </div>
         <section id= "section1" class = "vpn hide" role = "Information Secuirty">
